Download data from google drive

--- a/notebooks/01_read_data.ipynb
+++ b/notebooks/01_read_data.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "967562c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Base Params\n",
     "\n",
-    "DATA_IN_DIR = 'data_input'\n",
+    "DATA_IN_DIR = '../../data_input'\n",
     "\n",
     "USERS_IN_FILENAME = 'users.csv'\n",
     "PROFILES_IN_FILENAME = 'profiles.csv'\n",
