--- a/notebooks/01_read_data.ipynb
+++ b/notebooks/01_read_data.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "280e8b08-1b11-47fe-bf60-3d97e1eb488d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,17 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7fdbddd8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import sys\n",
+    "from pathlib import Path\n",
     "\n",
     "import dill\n",
     "import pandas as pd\n",
     "\n",
-    "import unimib_snowit_project.utils as u"
+    "# parent directory to path to import src module\n",
+    "sys.path.insert(0, str(Path.cwd().parent))\n",
+    "\n",
+    "import src.unimib_snowit_project.utils as u"
    ]
   },
   {
@@ -2618,7 +2632,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2632,7 +2646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
