--- a/notebooks/02_data_analysis.ipynb
+++ b/notebooks/02_data_analysis.ipynb
@@ -2,20 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "9e738ca1-ecf7-46b8-911d-950cc91dd3a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import dill\n",
-    "import unimib_snowit_project.utils as u\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sys\n",
+    "\n",
+    "# parent directory to path to import src module\n",
+    "sys.path.insert(0, str(Path.cwd().parent))\n",
+    "\n",
+    "import src.unimib_snowit_project.utils as u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "eedfdc9b-53ca-4bf2-b801-a63c34073860",
    "metadata": {},
    "outputs": [],
@@ -53,13 +58,171 @@
    "execution_count": null,
    "id": "6e2e5f5f-3817-4262-9a2a-25da7a1f88d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>card.uid</th>\n",
+       "      <th>assignedAt</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>status</th>\n",
+       "      <th>user.uid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00074016</td>\n",
+       "      <td>1970-01-18</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>rejected</td>\n",
+       "      <td>8k8yihozkbddsylcbqhybtjxdx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00092645</td>\n",
+       "      <td>2017-11-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>zuyanubq7ofphrkafbs0etobtz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01161471335348977786560</td>\n",
+       "      <td>2017-11-02</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>rejected</td>\n",
+       "      <td>hagjnkgp2nbhifbileyvrem8fq</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01161471335348977575088</td>\n",
+       "      <td>2017-11-02</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>xi6iuizkxtz5xdyvn9bjdojyq5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01161471335348877293519</td>\n",
+       "      <td>2017-11-02</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>rejected</td>\n",
+       "      <td>xpl6o1ecodttkzfkvwdiokcwir</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185684</th>\n",
+       "      <td>99121772</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1999-08-25</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>99ptug4itqxln58vcjknatm47v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185685</th>\n",
+       "      <td>99122539</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1997-10-14</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>wezleejnptdqek4xbbrjd4i3xb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185686</th>\n",
+       "      <td>99122540</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1997-04-29</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>wezleejnptdqek4xbbrjd4i3xb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185687</th>\n",
+       "      <td>99122573</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2006-12-18</td>\n",
+       "      <td>warning</td>\n",
+       "      <td>jzns5upwhqfijipsdzhf3t4xs3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185688</th>\n",
+       "      <td>99122584</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1976-08-13</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>jzns5upwhqfijipsdzhf3t4xs3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>185689 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       card.uid assignedAt   birthday    status  \\\n",
+       "0                      00074016 1970-01-18        NaT  rejected   \n",
+       "1                      00092645 2017-11-01        NaT   pending   \n",
+       "2       01161471335348977786560 2017-11-02        NaT  rejected   \n",
+       "3       01161471335348977575088 2017-11-02        NaT   pending   \n",
+       "4       01161471335348877293519 2017-11-02        NaT  rejected   \n",
+       "...                         ...        ...        ...       ...   \n",
+       "185684                 99121772        NaT 1999-08-25   pending   \n",
+       "185685                 99122539        NaT 1997-10-14   pending   \n",
+       "185686                 99122540        NaT 1997-04-29   pending   \n",
+       "185687                 99122573        NaT 2006-12-18   warning   \n",
+       "185688                 99122584        NaT 1976-08-13   pending   \n",
+       "\n",
+       "                          user.uid  \n",
+       "0       8k8yihozkbddsylcbqhybtjxdx  \n",
+       "1       zuyanubq7ofphrkafbs0etobtz  \n",
+       "2       hagjnkgp2nbhifbileyvrem8fq  \n",
+       "3       xi6iuizkxtz5xdyvn9bjdojyq5  \n",
+       "4       xpl6o1ecodttkzfkvwdiokcwir  \n",
+       "...                            ...  \n",
+       "185684  99ptug4itqxln58vcjknatm47v  \n",
+       "185685  wezleejnptdqek4xbbrjd4i3xb  \n",
+       "185686  wezleejnptdqek4xbbrjd4i3xb  \n",
+       "185687  jzns5upwhqfijipsdzhf3t4xs3  \n",
+       "185688  jzns5upwhqfijipsdzhf3t4xs3  \n",
+       "\n",
+       "[185689 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(users_df.head())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -73,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
