Added sentiment predictions to reviews dataset

--- a/notebooks/sentiment_analysis.ipynb
+++ b/notebooks/sentiment_analysis.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "c9bb32fa-3d95-4285-9309-5d4de69a0ef8",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "735876ee-8225-4f5d-89b7-67d049462c47",
    "metadata": {},
    "outputs": [
@@ -905,11 +905,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6f236d8e-dee7-4feb-a218-9f064379936b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review.uid</th>\n",
+       "      <th>user.uid</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>tcdf7enqg9sxqq4ie4qh3xzjbt</td>\n",
+       "      <td>i have bought several of the vitality canned d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>kszpqbggktbzmtkkkejthwyucw</td>\n",
+       "      <td>product arrived labeled as jumbo salted peanut...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>l01hczdvthqra6hsxbovmqipdc</td>\n",
+       "      <td>this is a confection that has been around a fe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>cmszp7l1j9pt53fvt178v3avxd</td>\n",
+       "      <td>if you are looking for the secret ingredient i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>bhimnczlhxddegbdaytb7gbhx2</td>\n",
+       "      <td>great taffy at a great price. there was a wide...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105705</th>\n",
+       "      <td>140942</td>\n",
+       "      <td>aucpq6co8tbk8qelhzezxa4rkm</td>\n",
+       "      <td>we love,love our keurig coffee maker .my husba...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105706</th>\n",
+       "      <td>140943</td>\n",
+       "      <td>bybi8rqc0odzbnbdlohrlqp9jt</td>\n",
+       "      <td>this is supposed to be a light roast coffee bu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105707</th>\n",
+       "      <td>140944</td>\n",
+       "      <td>lnp0swzvbkuhvqvdx0ctmjwn7v</td>\n",
+       "      <td>i have always been happy with my kcups but thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105708</th>\n",
+       "      <td>140945</td>\n",
+       "      <td>miyvfildj9cxsn27tqt3khp6gt</td>\n",
+       "      <td>i ordered light roast coffee and was sent one ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105709</th>\n",
+       "      <td>140946</td>\n",
+       "      <td>uojq7bff84fxfodmuekboe5zvy</td>\n",
+       "      <td>i love the ease of use and speed of the keurig...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>105710 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       review.uid                    user.uid  \\\n",
+       "0               1  tcdf7enqg9sxqq4ie4qh3xzjbt   \n",
+       "1               2  kszpqbggktbzmtkkkejthwyucw   \n",
+       "2               3  l01hczdvthqra6hsxbovmqipdc   \n",
+       "3               4  cmszp7l1j9pt53fvt178v3avxd   \n",
+       "4               5  bhimnczlhxddegbdaytb7gbhx2   \n",
+       "...           ...                         ...   \n",
+       "105705     140942  aucpq6co8tbk8qelhzezxa4rkm   \n",
+       "105706     140943  bybi8rqc0odzbnbdlohrlqp9jt   \n",
+       "105707     140944  lnp0swzvbkuhvqvdx0ctmjwn7v   \n",
+       "105708     140945  miyvfildj9cxsn27tqt3khp6gt   \n",
+       "105709     140946  uojq7bff84fxfodmuekboe5zvy   \n",
+       "\n",
+       "                                                     text  \n",
+       "0       i have bought several of the vitality canned d...  \n",
+       "1       product arrived labeled as jumbo salted peanut...  \n",
+       "2       this is a confection that has been around a fe...  \n",
+       "3       if you are looking for the secret ingredient i...  \n",
+       "4       great taffy at a great price. there was a wide...  \n",
+       "...                                                   ...  \n",
+       "105705  we love,love our keurig coffee maker .my husba...  \n",
+       "105706  this is supposed to be a light roast coffee bu...  \n",
+       "105707  i have always been happy with my kcups but thi...  \n",
+       "105708  i ordered light roast coffee and was sent one ...  \n",
+       "105709  i love the ease of use and speed of the keurig...  \n",
+       "\n",
+       "[105710 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4201471b-7d33-48dd-b971-a9e623e89b56",
+   "metadata": {},
+   "source": [
+    "## Sentiment predictions for all reviews using the trained model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d41e6892-bfb2-4da0-9254-438578a55385",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reviews_tfidf = tfidf.transform(reviews_df[\"text\"])\n",
+    "\n",
+    "reviews_df[\"sentiment_pred\"] = final_clf.predict(reviews_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6788479b-fa41-4711-a240-fab0f764819b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review.uid</th>\n",
+       "      <th>user.uid</th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentiment_pred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>tcdf7enqg9sxqq4ie4qh3xzjbt</td>\n",
+       "      <td>i have bought several of the vitality canned d...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>kszpqbggktbzmtkkkejthwyucw</td>\n",
+       "      <td>product arrived labeled as jumbo salted peanut...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>l01hczdvthqra6hsxbovmqipdc</td>\n",
+       "      <td>this is a confection that has been around a fe...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>cmszp7l1j9pt53fvt178v3avxd</td>\n",
+       "      <td>if you are looking for the secret ingredient i...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>bhimnczlhxddegbdaytb7gbhx2</td>\n",
+       "      <td>great taffy at a great price. there was a wide...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  review.uid                    user.uid  \\\n",
+       "0          1  tcdf7enqg9sxqq4ie4qh3xzjbt   \n",
+       "1          2  kszpqbggktbzmtkkkejthwyucw   \n",
+       "2          3  l01hczdvthqra6hsxbovmqipdc   \n",
+       "3          4  cmszp7l1j9pt53fvt178v3avxd   \n",
+       "4          5  bhimnczlhxddegbdaytb7gbhx2   \n",
+       "\n",
+       "                                                text sentiment_pred  \n",
+       "0  i have bought several of the vitality canned d...        neutral  \n",
+       "1  product arrived labeled as jumbo salted peanut...       negative  \n",
+       "2  this is a confection that has been around a fe...       positive  \n",
+       "3  if you are looking for the secret ingredient i...        neutral  \n",
+       "4  great taffy at a great price. there was a wide...       positive  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews_df.head()"
+   ]
   }
  ],
  "metadata": {
