Finalize full data pipeline: fix loading, cleaning, RFM, churn, sentiment model, and campaign targeting

--- a/notebooks/01_read_data.ipynb
+++ b/notebooks/01_read_data.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "280e8b08-1b11-47fe-bf60-3d97e1eb488d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7fdbddd8",
    "metadata": {},
    "outputs": [],
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "967562c6",
    "metadata": {},
    "outputs": [],
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "eca49fb6",
    "metadata": {},
    "outputs": [],
@@ -134,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2884fadd",
    "metadata": {},
    "outputs": [],
@@ -148,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d75765a0",
    "metadata": {},
    "outputs": [
@@ -162,7 +153,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c6b57413",
    "metadata": {},
    "outputs": [],
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "03f278da",
    "metadata": {},
    "outputs": [],
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c8f22faf",
    "metadata": {},
    "outputs": [
@@ -342,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "43069091",
    "metadata": {},
    "outputs": [],
@@ -356,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "55caf006",
    "metadata": {},
    "outputs": [
@@ -368,7 +359,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "5cff2659",
    "metadata": {},
    "outputs": [],
@@ -390,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0b95b5a1",
    "metadata": {},
    "outputs": [],
@@ -454,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "db31d5bb",
    "metadata": {},
    "outputs": [
@@ -540,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "797ea10a",
    "metadata": {},
    "outputs": [
@@ -592,7 +583,7 @@
        "NaN          18212"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "efe1e74b",
    "metadata": {},
    "outputs": [
@@ -738,7 +729,7 @@
        "[18212 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "7926e01d",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "2d9c2c18",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "87570c49",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ca74b837",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "385b626c",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1137,7 @@
        "Index(['card.uid', 'assignedAt', 'birthday', 'status', 'user.uid'], dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "be8b2d9b",
    "metadata": {},
    "outputs": [],
@@ -1167,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "003b9a45",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1168,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "f02448f3-6683-415b-acf1-c2c321f2e26c",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "6c32375f-dd44-4f48-b8cf-193a7ae59ea9",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "a2335f73-8a31-4eca-bda3-97e3fd031484",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "7cc499c5-9c8b-4f48-a133-3adab4a859db",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "76be03c5-60ce-47a6-8c44-80e9178377a6",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "16e9b108-b402-4707-a95e-20d09a8d9976",
    "metadata": {},
    "outputs": [
@@ -1557,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "a92cbec3-2879-415f-98b4-08dd66d79f57",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1558,7 @@
        "185689"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "5d72857a",
    "metadata": {},
    "outputs": [],
@@ -1600,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "d044d767",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1604,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "487357da",
    "metadata": {},
    "outputs": [],
@@ -1635,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "e7b91b51",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "6f134a13-19a7-4c21-a122-c99a481716f9",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "3516a9a8-2d20-4699-971b-3485e781f937",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "38314f19-2bc0-4bfe-a880-6dc460c7767e",
    "metadata": {},
    "outputs": [],
@@ -1820,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "28987e95",
    "metadata": {},
    "outputs": [],
@@ -1834,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "8241a9e7",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1840,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "9f57d8b1",
    "metadata": {},
    "outputs": [],
@@ -1870,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "f728ed86",
    "metadata": {},
    "outputs": [
@@ -1942,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "d2accc60-2614-40b0-90d6-f9ed8e9ce028",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "d423869f-fed2-4519-a50f-eba9488588fb",
    "metadata": {},
    "outputs": [
@@ -2061,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "c74e5ae9-a8a6-497c-b8d8-1925bdb0a4e7",
    "metadata": {},
    "outputs": [
@@ -2112,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "88e9029a-20de-4836-ac25-4c2364193a59",
    "metadata": {},
    "outputs": [
@@ -2149,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "173d5709-b614-47b7-83a6-31aa8b2f71e0",
    "metadata": {},
    "outputs": [
@@ -2185,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "a4ce75f3-d018-46e2-9db5-37508775e97e",
    "metadata": {},
    "outputs": [],
@@ -2199,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "0c094569-b72e-450e-a6ea-fae5c062f260",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2200,7 @@
        "Index(['review.uid', 'user.uid', 'text'], dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2220,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "0f00fe30-f95a-4eea-a01b-8c19ec241dd0",
    "metadata": {},
    "outputs": [],
@@ -2244,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "22d2d00b-8d6a-4de8-abf1-9ddb2420a1fa",
    "metadata": {},
    "outputs": [
@@ -2330,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "id": "7cacfe69-4842-4e96-a74e-8b6fe4e7e3b0",
    "metadata": {},
    "outputs": [
@@ -2389,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "id": "955b3e70-119a-42d6-9431-8ddd85f50270",
    "metadata": {},
    "outputs": [
@@ -2399,7 +2390,7 @@
        "Index(['labelled_review.uid', 'text', 'sentiment_label'], dtype='object')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2416,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "id": "5ea4ed6b-d38f-48e1-8234-26c6d118b4b5",
    "metadata": {},
    "outputs": [],
@@ -2447,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "e928d849-3e17-42aa-b5be-573587af518b",
    "metadata": {},
    "outputs": [
@@ -2541,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "88cc55fc",
    "metadata": {},
    "outputs": [
@@ -2573,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "225b2eed-babc-4bb5-a7a0-2454a8d3da61",
    "metadata": {},
    "outputs": [
@@ -2598,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "d2146d18-9b65-4814-82fe-e3110e9c55e6",
    "metadata": {},
    "outputs": [
@@ -2632,7 +2623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2646,7 +2637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
