--- a/notebooks/00_download_data.ipynb
+++ b/notebooks/00_download_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0203b60c",
    "metadata": {},
    "outputs": [
@@ -29,8 +29,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1O03lb4ZqqMwy3aPeZquAT_OU9ChNyIEM\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\cards.csv\n",
-      "100%|██████████| 44.1M/44.1M [00:02<00:00, 17.5MB/s]\n"
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/cards.csv\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 44.1M/44.1M [00:02<00:00, 21.5MB/s]\n"
      ]
     },
     {
@@ -46,9 +46,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=1u1vsiNpF6saIcG3iDN-R7AiYAFqf9uzq\n",
-      "From (redirected): https://drive.google.com/uc?id=1u1vsiNpF6saIcG3iDN-R7AiYAFqf9uzq&confirm=t&uuid=1ba096e9-a79a-42d5-ae78-d22127633d43\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\order_details.csv\n",
-      "100%|██████████| 239M/239M [00:12<00:00, 18.5MB/s] \n"
+      "From (redirected): https://drive.google.com/uc?id=1u1vsiNpF6saIcG3iDN-R7AiYAFqf9uzq&confirm=t&uuid=b826083e-1e2a-4570-ab54-085aaabc415d\n",
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/order_details.csv\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 239M/239M [00:07<00:00, 32.2MB/s]\n"
      ]
     },
     {
@@ -64,9 +64,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=161Rv1xsAevewSnTRFV-9q6FWokgr_-Xt\n",
-      "From (redirected): https://drive.google.com/uc?id=161Rv1xsAevewSnTRFV-9q6FWokgr_-Xt&confirm=t&uuid=921289d1-60f8-45d5-85b1-a490bafcba31\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\orders.csv\n",
-      "100%|██████████| 250M/250M [00:13<00:00, 18.1MB/s] \n"
+      "From (redirected): https://drive.google.com/uc?id=161Rv1xsAevewSnTRFV-9q6FWokgr_-Xt&confirm=t&uuid=5432bb79-a5e8-4528-b069-9fd20d24b0f9\n",
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/orders.csv\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 250M/250M [00:07<00:00, 35.7MB/s]\n"
      ]
     },
     {
@@ -82,8 +82,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1bOe2EaMQbrBZyINh9pLMPltDJ2BoNG_D\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\profiles.csv\n",
-      "100%|██████████| 21.4M/21.4M [00:01<00:00, 20.3MB/s]\n"
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/profiles.csv\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 21.4M/21.4M [00:01<00:00, 16.5MB/s]\n"
      ]
     },
     {
@@ -99,9 +99,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=1DRYj7r7VnlNyCSMrEHLbwWqj0fodBymV\n",
-      "From (redirected): https://drive.google.com/uc?id=1DRYj7r7VnlNyCSMrEHLbwWqj0fodBymV&confirm=t&uuid=32d2b54e-38cb-4975-8118-ae5603b7f72e\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\reviews_labelled.csv\n",
-      "100%|██████████| 212M/212M [00:11<00:00, 18.4MB/s] \n"
+      "From (redirected): https://drive.google.com/uc?id=1DRYj7r7VnlNyCSMrEHLbwWqj0fodBymV&confirm=t&uuid=e9ec3702-8b13-431e-bce2-6442703d8a5c\n",
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/reviews_labelled.csv\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 212M/212M [00:07<00:00, 27.2MB/s]\n"
      ]
     },
     {
@@ -117,8 +117,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1kLhalVn5iczHSdp5o3I2PIWCqkOFfpuO\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\reviews.csv\n",
-      "100%|██████████| 51.0M/51.0M [00:02<00:00, 19.8MB/s]\n"
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/reviews.csv\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 51.0M/51.0M [00:02<00:00, 20.6MB/s]\n"
      ]
     },
     {
@@ -134,8 +134,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1K2lycSQXUyMSBx0_NqfuljYzJbW6RzsF\n",
-      "To: c:\\Users\\Admin\\Desktop\\DATA SCIENCE\\Semester 2\\Marketing Analytics\\data_input\\users.csv\n",
-      "100%|██████████| 69.2M/69.2M [00:03<00:00, 19.7MB/s]"
+      "To: /Users/farabiisa/Desktop/Bicocca/Marketing Analytics/unimib_snowit_project/data_input/users.csv\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 69.2M/69.2M [00:02<00:00, 23.5MB/s]"
      ]
     },
     {
@@ -162,9 +162,13 @@
     "import os\n",
     "from pathlib import Path\n",
     "import gdown\n",
+    "import unimib_snowit_project.utils as u\n",
+    "\n",
+    "# Detect project root dynamically\n",
+    "ROOT_DIR = u.get_root_dir()  \n",
     "\n",
     "# Ensure data_input/ exists\n",
-    "DATA_DIR = Path(\"../../data_input\")\n",
+    "DATA_DIR = ROOT_DIR / \"data_input\" \n",
     "DATA_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Google Drive FILE IDs for each dataset\n",
@@ -194,11 +198,19 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "047dd3c7-171c-4884-ab06-17e59d6319af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
