--- a/notebooks/06_Data_driven_marketing_campagn.ipynb
+++ b/notebooks/06_Data_driven_marketing_campagn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "e81e8ffe",
    "metadata": {},
    "outputs": [
@@ -44,12 +44,12 @@
       "\n",
       "--- Training Random Forest churn model ---\n",
       "\n",
-      "ROC-AUC: 0.7569\n",
+      "ROC-AUC: 0.7567\n",
       "\n",
       "Classification report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      0.40      0.45      6793\n",
+      "           0       0.50      0.40      0.44      6793\n",
       "           1       0.84      0.88      0.86     23732\n",
       "\n",
       "    accuracy                           0.78     30525\n",
@@ -61,7 +61,7 @@
       "\n",
       "--- Scoring all customers and selecting campaign targets ---\n",
       "Monetary cutoff (top 50%): 125.00\n",
-      "Number of campaign targets: 34862\n",
+      "Number of campaign targets: 34861\n",
       "\n",
       " Campaign targets saved to: campaign_targets.csv\n",
       "=== PIPELINE COMPLETED ===\n"
@@ -76,6 +76,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import sys\n",
+    "import numpy as np\n",
     "\n",
     "# Adjust sys.path to include the project root for src module\n",
     "project_root = Path.cwd().parent\n",
@@ -423,11 +424,19 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfd5d067-c290-472f-bcc4-43702b9ab975",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
